Fri Aug 01 20:18:54 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Outgoing typing notification is now supported.

Fri Aug 01 20:07:30 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The unwanted newline after every line entered in an IM or chat
	    is now stripped.

Fri Aug 01 20:01:16 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - Use our QGaimTabWidget for the account editor.

Fri Aug 01 20:00:20 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimMultiLineEdit.cpp:
	* src/QGaimMultiLineEdit.h:
	  - Added history support to the input box.

Fri Aug 01 19:09:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimTabBar.cpp:
	  - The protocol icon for the account on each conversation is
	    now displayed on the tab.

Fri Aug 01 18:19:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - The Depends line was being written to stdout, and not to the
	    control file. Fixed.

Fri Aug 01 15:57:12 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Opening an IM window from the buddy list now raises the new tab
	    in the conversation window.

Fri Aug 01 15:50:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimTabBar.cpp:
	* src/QGaimTabBar.h:
	* src/QGaimTabWidget.cpp:
	* src/QGaimTabWidget.h:
	  - Added typing notification (incoming only).

Fri Aug 01 13:25:00 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkstuff.conf:
	  - Changed the version to 0.1-cvsdate.

Fri Aug 01 13:23:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimTabBar.cpp:
	* src/QGaimTabBar.h:
	* src/QGaimTabWidget.cpp: