@@ -1,3 +1,9 @@
+Fri Aug 01 20:43:57 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	  - Fixed Cae Bug #1, all the way from New Jersey! Gaim was sending
+	    out a TYPED message even after sending a full message.
+
 Fri Aug 01 20:18:54 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
